# gemini-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: advanced.rs  curl_equivalent.rs  curl_google_search.rs  gemini_pro_example.rs  generation_config.rs  google_search.rs  google_search_with_functions.rs  simple.rs  streaming.rs  structured_response.rs  test_api.rs  tools.rs
src/: client.rs  error.rs  lib.rs  models.rs  tools.rs
