[package]
name = "gemini-rust"
version = "0.4.0"
edition = "2021"
description = "Rust client for Google Gemini API"
license = "MIT"
repository = "https://github.com/flachesis/gemini-rust"
readme = "README.md"
keywords = ["gemini", "google", "ai", "client"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
thiserror = "2.0.12"
url = "2.4"
async-trait = "0.1"
futures = "0.3.1"
futures-util = "0.3"
